--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@lhci/cli": "^0.15.1",
+    "@netlify/functions": "^4.2.1",
     "@next/bundle-analyzer": "^15.4.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
