--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,17 @@
 
 [build.environment]
   NEXT_PRIVATE_TARGET = "server"
+  NODE_VERSION = "18"
+
+# Form settings
+[context.production.environment]
+  NETLIFY_FORMS_ENABLED = "true"
+
+# Headers for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
