--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
-    "next": "14.2.18",
+    "next": "^14.2.31",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.61.1",
@@ -60,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "beasties": "^0.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "jest": "^29.7.0",
