now more modular

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "performance:budget": "npm run build && npm run lighthouse:ci && node -e \"console.log('Performance budget check complete')\"",
     "performance:full": "npm run analyze:bundle && npm run performance:audit",
     "performance:ci": "npm run build && npm run lighthouse:ci && npm run analyze:bundle",
+    "images:optimize": "node scripts/optimize-images.js hero",
+    "images:optimize:all": "node scripts/optimize-images.js all",
+    "images:webp": "npm run images:optimize",
     "integration:test": "node scripts/integration-test.js",
     "accessibility:audit": "node scripts/accessibility-audit.js",
     "deploy:check": "npm run type-check && npm run lint && npm run test:ci && npm run build",
