--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.0",
     "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "^14.2.31",
     "react": "^18",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
