--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lighthouse": "^12.8.0",
+    "playwright": "^1.57.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
