--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@lhci/cli": "^0.15.1",
     "@next/bundle-analyzer": "^15.4.4",
     "@testing-library/jest-dom": "^6.4.2",
+    "raw-loader": "^4.0.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
