--- a/package.json
+++ b/package.json
@@ -8,17 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
     "analyze": "ANALYZE=true npm run build",
-    "lighthouse": "lhci autorun",
-    "lighthouse:ci": "lhci autorun --collect.numberOfRuns=1",
-    "lighthouse:desktop": "lighthouse http://localhost:3000 --preset=desktop --output=html --output-path=./lighthouse-desktop.html",
-    "lighthouse:mobile": "lighthouse http://localhost:3000 --preset=mobile --output=html --output-path=./lighthouse-mobile.html",
-    "deploy:check": "npm run type-check && npm run lint && npm run test:ci && npm run build",
-    "export": "next export",
     "clean": "rmdir /s /q .next out node_modules\\.cache 2>nul || echo Clean completed",
     "fresh-install": "npm run clean && npm install",
     "precommit": "npm run lint && npm run type-check",
@@ -43,24 +33,14 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
-    "@lhci/cli": "^0.15.1",
     "@next/bundle-analyzer": "^15.4.4",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lighthouse": "^12.8.0",
-    "playwright": "^1.57.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "typescript": "^5"
   }
 }
